################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the `bitvec` Rust project to the Rust build tool, Cargo. #
################################################################################

[package]
name = "bitvec"
version = "0.15.2"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
categories = [
	"data-structures",
	"embedded",
	"no-std",
	"rust-patterns",
]
description = "A crate for manipulating memory, bit by bit"
documentation = "https://docs.rs/bitvec"
edition = "2018"
homepage = "https://myrrlyn.net/crates/bitvec"
keywords = [
	"bits",
	"bitvec",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/bitvec"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "benches/**/*",
    "tests/**/*",
    "/sgx/*",
]

[features]
alloc = ["mesalock_sgx"]
atomic = []
default = [
	"atomic",
	"std",
]
std = [
	"alloc",
	"mesalock_sgx"
]
testing = [
	"atomic",
	"serde",
	"std",
]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
radium = "0.2"
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", optional = true, default-features = false, features = ["derive"] }

# Crates required when running the test suite.
[dev-dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde_test = "1"

# Indicates the features that docs.rs should enable when building documentation.
[package.metadata.docs.rs]
features = [
	"atomic",
	"serde",
	"std",
]

[badges.codecov]
repository = "myrrlyn/bitvec"
branch = "master"
service = "github"

[badges.is-it-maintained-issue-resolution]
repository = "myrrlyn/bitvec"

[badges.is-it-maintained-open-issues]
repository = "myrrlyn/bitvec"

[badges.maintenance]
status = "actively-developed"
